--- a/flix/Views/Review/review.cshtml
+++ b/flix/Views/Review/review.cshtml
@@ -54,13 +54,19 @@
                                                     <p class="moviedes">@Model.Description</p>
                                                     <p class="moviedes">@Model.Year</p>
                                                     <p class="moviedes">@Model.Country.Name</p>
-                                                    <p class="moviedes">@Model.Sinopsis</p>
+                                                <p class="moviedes">@Model.Country.Abbv</p>
+                                                <p class="moviedes">@Model.Sinopsis</p>
+                                                    <p class="moviedes">@Model.Length</p>
                                                 
+                                                
+                                                <p class="moviedes">Son Generos de Pelicula</p>
                                                 @foreach (var genre in Model.Genres)
                                                 {
                                                     <p class="moviedes">@genre.Name</p>
                                                 
                                                 }
+                                                
+                                              
                                                
                                             </div>
                                     </div>
