--- a/flix/Views/Home/Index.cshtml
+++ b/flix/Views/Home/Index.cshtml
@@ -167,7 +167,7 @@
 
        </div>
     </div>
-
+    isaac n
 
     <script>
         /* Search bar */
@@ -176,8 +176,6 @@
 
         $(document).ready(function () {
 
-            // Set up common variables
-            // --------------------------------------------------
 
             var bar = ".search_bar";
             var input = bar + " input[type='text']";
@@ -186,10 +184,6 @@
             var dropdownLabel = dropdown + " > span";
             var dropdownList = dropdown + " ul";
             var dropdownListItems = dropdownList + " li";
-
-
-            // Set up common functions
-            // --------------------------------------------------
 
             resizeElements = function () {
                 var barWidth = $(bar).outerWidth();
