--- a/flix/Views/Perfil/perfil.cshtml
+++ b/flix/Views/Perfil/perfil.cshtml
@@ -30,7 +30,7 @@
                 <div class="panel panel-default" >
                     <div class="panel-body">
 
-                        <div class="container" style="margin: 0 auto;;margin-left:100px;">
+                        <div class="container" style="margin: 0 auto;margin-left:100px;">
                             <div class="row">
 
                                 <div style="height:400px;text-align:center;" class="col-md-3">
