index repair - Slick

--- a/flix/Views/Home/Index.cshtml
+++ b/flix/Views/Home/Index.cshtml
@@ -5,10 +5,13 @@
     ViewBag.Title = "Index";
 
 }
-
 <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 <script src="//code.jquery.com/jquery-1.10.2.js"></script>
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>  
+<script src="~/Resources/Libraries/slick-1.6.0/slick/slick.min.js"></script>
+<script src="~/Resources/Libraries/slick-1.6.0/slick/slick.js"></script>
+
+
 <script type="text/javascript">
 
     $(document).ready(function () {
