--- a/flix/Views/Shared/_Layout.cshtml
+++ b/flix/Views/Shared/_Layout.cshtml
@@ -9,8 +9,9 @@
     <title>@ViewBag.Title - Reviews Online</title>
     <link rel="stylesheet" type="text/css" href="~/Resources/Libraries/slick-1.6.0/slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="~/Resources/Libraries/slick-1.6.0/slick/slick-theme.css"/>
-
-
+    <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+    <script src="~/Resources/Libraries/slick-1.6.0/slick/slick.min.js"></script>
+    <script src="~/Resources/Libraries/slick-1.6.0/slick/slick.js"></script>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
