--- a/flix/Views/Home/Index.cshtml
+++ b/flix/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
                 });
             },
             messages: {
-                noResults: "", results: ""
+                noResults: "Data Not Found", results: ""
             }
         });
     })
@@ -51,34 +51,29 @@
     margin-left: auto;">
 
         <form class="search_bar larger">
-            <div class="search_dropdown" style="width: 16px;">
-                <span>All</span>
-                <ul>
-                    <li class="selected">All</li>
-                    <li>Actores</li>
-                    <li>Pelicula</li>
-                    <li>Genero</li>
-                    
-                </ul>
-            </div>
-            
-                <div class="form-horizontal">
+            @Html.DropDownList("Opciones",new List<SelectListItem>
+            {
+                new SelectListItem {Text="Pelicula", Value = "1"},
+                new SelectListItem {Text = "Genero", Value = "2"}
+            },FormMethod.Post)
+            <button type="submit" value="Search">Search</button>
+            <div class="form-horizontal">
 
-                    <hr/>
+                <hr/>
 
-                    <div class="form-group">
+                <div class="form-group">
                     @using (Html.BeginForm())
                     {
                         @Html.AntiForgeryToken()
 
                         <div class="col-md-12">
                             @Html.EditorFor(model => model.Movie.Title, new {htmlAttributes = new {Id = "Search", @class = "form-control"}})
-                 
+
                         </div>
-                    } 
-                    </div>
-                    <button type="submit" value="Search">Search</button>
+                    }
                 </div>
+                <button type="submit" value="Search">Search</button>
+            </div>
         </form>
     </div>
   
@@ -214,7 +209,7 @@
 
        </div>
     </div>
-    isaac n
+
 
     <script>
         /* Search bar */
@@ -223,6 +218,8 @@
 
         $(document).ready(function () {
 
+            // Set up common variables
+            // --------------------------------------------------
 
             var bar = ".search_bar";
             var input = bar + " input[type='text']";
@@ -231,6 +228,10 @@
             var dropdownLabel = dropdown + " > span";
             var dropdownList = dropdown + " ul";
             var dropdownListItems = dropdownList + " li";
+
+
+            // Set up common functions
+            // --------------------------------------------------
 
             resizeElements = function () {
                 var barWidth = $(bar).outerWidth();
