Repare el desastre de Isaac

--- a/flix/Views/Home/Index.cshtml
+++ b/flix/Views/Home/Index.cshtml
@@ -7,10 +7,9 @@
 }
 <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 <script src="//code.jquery.com/jquery-1.10.2.js"></script>
-<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>  
+<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 <script src="~/Resources/Libraries/slick-1.6.0/slick/slick.min.js"></script>
 <script src="~/Resources/Libraries/slick-1.6.0/slick/slick.js"></script>
-
 
 <script type="text/javascript">
 
@@ -54,11 +53,14 @@
     margin-left: auto;">
 
         <form class="search_bar larger">
-            @Html.DropDownList("Opciones",new List<SelectListItem>
+            <div class="search_dropdown">
+                @Html.DropDownList("Opciones", new List<SelectListItem>
             {
                 new SelectListItem {Text="Pelicula", Value = "1"},
                 new SelectListItem {Text = "Genero", Value = "2"}
-            },FormMethod.Post)
+            }, FormMethod.Post)
+            </div>
+        
             <button type="submit" value="Search">Search</button>
             <div class="form-horizontal">
 
