+UserLong Working by rodo but isaac made the uncommented +Session working

--- a/flix/Views/Shared/_Layout.cshtml
+++ b/flix/Views/Shared/_Layout.cshtml
@@ -105,7 +105,7 @@
                         @if (Session["username"] == null)
                         {
 
-                              <li>@Html.ActionLink("Login", "Login", "Login")</li>
+                              <li>@Html.ActionLink("Login", "UserL", "UserL")</li>
                             <li>@Html.ActionLink("Register", "Register", "Login")</li>
                         }
                     </li>
