--- a/flix/Views/Admin/Admin.cshtml
+++ b/flix/Views/Admin/Admin.cshtml
@@ -1,6 +1,4 @@
-﻿
-
-@{
+﻿@{
     ViewBag.Title = "Admin";
 
 }
@@ -72,22 +70,97 @@
                     </div>
 
                    <div id="1" class="base2">
-                    <p  class="base">PANEL 1</p>
+                        <p  class="base">
+                            Movie
+                            <br />
+                            <br />
+                            Title
+                            <input class="form-control" id="Title" name="Title" type="text" value="Title" />
+                            <br />
+                            Year
+                            <input class="form-control" id="Year" name="Year" type="text" value="Year" />[
+                            <br />
+                            Length
+                            <input class="form-control" id="Length" name="Length" type="text" value="Length" />[
+                            <br />
+                            Sinposis
+                            <input class="form-control" id="Sinposis" name="Sinposis" type="text" value="Sinposis" />[
+                            <br />
+                            Description
+                            <input class="form-control" id="Description" name="Description" type="text" value="Description" />[
+                            <br />
+                            Country
+                            <br />
+                            Director
+                            <br />
+                        </p>
                    </div>
                     <div id="2" class="base2">
-                        <p  class="base">PANEL 2</p>
+                        <p  class="base">Actor
+                            <br />
+                            <br />
+                            Name
+                            <input class="form-control" id="Name" name="Name" type="text" value="Name" />
+                            <br />
+                            Lastname <br />
+                            <button type="button">Image</button>
+                        </p>
                     </div>
                     <div id="3" class="base2">
-                        <p class="base">PANEL 3</p>
+                        <p class="base">Genre
+                            <br />
+                            <br />
+                            Name
+                            <input class="form-control" id="Name" name="Name" type="text" value="Name" />
+                            <br />
+                        </p>
                     </div>
                     <div id="4" class="base2">
-                        <p class="base">PANEL 4</p>
+                        <p class="base">Director
+                            <br />
+                            <br />
+                            Name
+                            <input class="form-control" id="Name" name="Name" type="text" value="Name" />
+                            <br />
+                        </p>
                     </div>
                     <div id="5" class="base2">
-                        <p class="base">PANEL 5</p>
+                        <p class="base">Poster
+                            Image<br />
+                            <button type="button">Image</button>
+                            <br />
+                            Movie
+                        </p>
                     </div>
                     <div id="6" class="base2">
-                        <p class="base">PANEL 6</p>
+                        <p class="base">
+                            USER
+                            <br />
+                            <br />
+                            Name
+                            <input class="form-control" id="Name" name="Name" type="text" value="Name" />
+                            <br />
+                            Lastname
+                            <input class="form-control" id="Lastname" name="Lastname" type="text" value="Lastname" />
+                            <br />
+                            Username
+                            <input class="form-control" id="Username" name="Username" type="text" value="Username" />
+                            <br />
+                            Email
+                            <input class="form-control" id="Email" name="Email" type="text" value="Email" />
+                            <br />
+                            Password
+                            <input class="form-control" id="Password" name="Password" type="text" value="Password" />
+                            <br />
+                            Age
+                            <input class="form-control" id="Age" name="Age" type="text" value="Age" />
+                            <br />
+                            Genre
+                            <br />
+                            Image<br />
+                            <button type="button">Image</button>
+                            <br />
+                        </p>
                     </div>
 
                 </div>
