Cambios en review

--- a/flix/Views/Perfil/perfil.cshtml
+++ b/flix/Views/Perfil/perfil.cshtml
@@ -4,7 +4,13 @@
 @{
     ViewBag.Title = "perfil";
 }
-
+<head>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+    <script src="~/Resources/Libraries/slick-1.6.0/slick/slick.min.js"></script>
+    <script src="~/Resources/Libraries/slick-1.6.0/slick/slick.js"></script>
+</head>
 
 <body class="body-content" style="background-color:#2e313f;">
 
@@ -68,7 +74,7 @@
                                     @foreach (var reviews in Model.ProfileViewModel.LMovie)
                                     { 
                                         <p class="moviedes">Titulo:@reviews.Title</p>
-                                      
+                                     
                                     }
                                    
                                     @foreach (var reviews in Model.ProfileViewModel.LPoster)
@@ -84,8 +90,6 @@
                                       
                                     }
                                     
-                                     
-
                                    
                                        
                                 </div>
