--- a/flix/Content/Site.css
+++ b/flix/Content/Site.css
@@ -26,6 +26,10 @@ textarea {
     color:white;
     font-size: 50px;
 }
+.fondo404{
+    background-image:url(robot-404.png);
+
+}
 .log1{
      
          height: 76px;
@@ -84,6 +88,18 @@ a:hover
 
     /* Set a specific height */
     height: 300px; 
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width:100%;
+}
+.parallaxerror { 
+    /* The image used */
+    background-image: url(robot-404.png);
+
+    /* Set a specific height */
+    height: 700px; 
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
