--- a/flix/Views/Shared/Error.cshtml
+++ b/flix/Views/Shared/Error.cshtml
@@ -1,14 +1,22 @@
 ﻿<!DOCTYPE html>
 <html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta name="viewport" content="width=device-width" />
-    <title>Error</title>
-</head>
-<body>
-    <hgroup>
-        <h1>Error.</h1>
-        <h2>Error al procesar la solicitud.</h2>
-    </hgroup>
+
+
+<body class="" style="background-color:#2e313f;">
+    <div class="parallaxerror">
+        <div>
+            <h1 style="color:black;text-align:center;padding-top:120px;">CONTENIDO NO ENCONTRADO</h1>
+            <button class="btn btn-default" >
+             regresar
+            </button>
+        </div>
+
+    </div>
+
+
+
+
 </body>
+
+
 </html>
